# dynamodb-parallel-scanx

./: .gitignore  LICENSE  README.md  clean_install.sh  pyproject.toml
src/dynamodb_paralell_scanx/: __init__.py  cli.py  paginator.py  stst.py
src/dynamodb_parallel_scanx/: __init__.py  auto_type_probe.py  cli.py  io_utils.py  paginator.py
