[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamodb-parallel-scanx"
dynamic = ["version"]
description = "Fast parallel scan for DynamoDB with STS AssumeRole and tuned connection pooling."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Luis Parada", email = "enrique_parada@outlook.com"}]
requires-python = ">=3.6"
dependencies = ["boto3>=1.32"]

[project.scripts]
dpscan = "dynamodb_parallel_scanx.cli:main"

# 👇 ESTO ES CLAVE PARA SRC LAYOUT
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dynamodb_parallel_scanx*"]

[tool.setuptools.dynamic]
version = { attr = "dynamodb_parallel_scanx.__version__" }
